--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,9 +27,12 @@
   }
 }
 </script>
+<!-- Add Babel Standalone for in-browser JSX/TSX transformation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Change script type to "text/babel" and add data-type="module" -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
